# MLOps

./: .pre-commit-config.yaml  infer.py  pyproject.toml  train.py
mlops/: model.py  utils.py
models/: iris.pt
notebooks/: main.ipynb
