[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["superkisa <81680387+superkisa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
numpy = "^1.26.0"
torchinfo = "^1.8.0"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
